<PreferenceScreen
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <Preference
                app:key="@string/key_birthday"
                app:title="@string/title_pref_birthday"/>

        <PreferenceCategory
                app:key="button_text_category"
                app:title="@string/title_settings_category_button_text">

                <EditTextPreference
                        app:key="button1"
                        app:title="@string/button_1_text"
                        app:dialogTitle="@string/title_settings_button_1"
                        app:dialogMessage="@string/message_settings_button1"/>

                <EditTextPreference
                        app:key="button2"
                        app:title="@string/button_2_text"
                        app:dialogTitle="@string/title_settings_button_2"
                        app:dialogMessage="@string/message_settings_button2"/>

                <EditTextPreference
                        app:key="button3"
                        app:title="@string/button_3_text"
                        app:dialogTitle="@string/title_settings_button_3"
                        app:dialogMessage="@string/message_settings_button3"/>

                <EditTextPreference
                        app:key="button4"
                        app:title="@string/button_4_text"
                        app:dialogTitle="@string/title_settings_button_4"
                        app:dialogMessage="@string/message_settings_button4"/>
        </PreferenceCategory>

        <!--<PreferenceCategory-->
                <!--key="reminders_category"-->
                <!--title="@string/reminders">-->

        <!--</PreferenceCategory>-->

</PreferenceScreen>