<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


    <TextView
            android:id="@+id/txtAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.5"
            android:text="@string/puppyage" android:textSize="30sp" android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toTopOf="@+id/btnPee"
            app:layout_constraintVertical_chainStyle="spread_inside"/>

    <Button
            android:id="@+id/btnCrate"
            android:text="Crate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="36dp"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/txtCrate"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/btnFood"
    />
    <Button
            android:id="@+id/btnFood"
            android:text="Food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/txtFood"
            app:layout_constraintTop_toBottomOf="@+id/btnPoo"
            app:layout_constraintBottom_toTopOf="@+id/btnCrate"/>
    <Button
            android:id="@+id/btnPee"
            android:text="Pee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/txtPee"
            app:layout_constraintTop_toBottomOf="@+id/txtAge"
            app:layout_constraintBottom_toTopOf="@+id/btnPoo"
    />
    <Button
            android:id="@+id/btnPoo"
            android:text="Poo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/txtPoo"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintTop_toBottomOf="@+id/btnPee" app:layout_constraintBottom_toTopOf="@+id/btnFood"
    />
    <TextView
            android:id="@+id/txtCrate"
            android:text="@string/press_button_to_record_time"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintStart_toEndOf="@+id/btnCrate"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/btnCrate" app:layout_constraintBottom_toBottomOf="@+id/btnCrate"
            android:gravity="center_vertical" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/txtRecCrate"/>
    <TextView
            android:id="@+id/txtPee"
            android:text="@string/press_button_to_record_time"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintStart_toEndOf="@+id/btnPee" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/btnPee" app:layout_constraintBottom_toBottomOf="@+id/btnPee"
            android:gravity="center_vertical"/>
    <TextView
            android:id="@+id/txtPoo"
            android:text="@string/press_button_to_record_time"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintStart_toEndOf="@+id/btnPoo" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintTop_toTopOf="@+id/btnPoo" app:layout_constraintBottom_toBottomOf="@+id/btnPoo"
            app:layout_constraintHorizontal_bias="0.5" android:gravity="center_vertical"/>
    <TextView
            android:id="@+id/txtFood"
            android:text="@string/press_button_to_record_time"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintStart_toEndOf="@+id/btnFood"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/btnFood" app:layout_constraintBottom_toBottomOf="@+id/btnFood"
            android:gravity="center_vertical"/>
    <TextView
            android:text="@string/puppymaxcrate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtRecCrate" app:layout_constraintStart_toEndOf="@+id/txtCrate"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toTopOf="@+id/txtCrate" app:layout_constraintBottom_toBottomOf="@+id/txtCrate"
            android:layout_marginLeft="16dp"/>
    <ImageButton
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:id="@+id/btnFlashlight"
            android:src="@drawable/ic_btn_flashlight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="26dp" app:layout_constraintTop_toBottomOf="@+id/txtAge"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/btnPee"/>


</androidx.constraintlayout.widget.ConstraintLayout>